Added user preferences endpoints and authentications
- added routes for update, list preferences of user
- added feed endpoint that return article based on user preferences
- implement basic authentications.
- migration for preferences table.
- implement ForceJsonResponse middleware now all api request set Accept header
